consolidated add and edit community

--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row">
-        <div class="hpanel hblue col-xs-4" >
+        <div class="hpanel hblue col-xs-12 col-sm-6 col-md-4" >
             <div class="panel-body">
                 <div class="stats-title">
                     <h3>Networks</h3>
@@ -33,7 +33,7 @@
 
         </div>
 
-        <div class="hpanel hnavyblue col-xs-4" >
+        <div class="hpanel hnavyblue col-xs-12 col-sm-6 col-md-4" >
             <div class="panel-body">
                 <div class="stats-title">
                     <h3>Clusters</h3>
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <div class="hpanel hgreen col-xs-4" >
+        <div class="hpanel hgreen col-xs-12 col-sm-6 col-md-4" >
             <div class="panel-body">
                 <div class="stats-title">
                     <h3>Locations</h3>
