working on name change

--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -40,7 +40,7 @@
                 </div>
                 <hr>
                 <div ng-repeat="(k, v) in nav.user.roles.leader">
-                    <div ng-if="nav.communities[k].type == 'cluster'" style="padding-bottom:10px; font-size: 18px;">{{ nav.communities[k].profile.name }}
+                    <div ng-if="nav.communities[k].type == 'cluster'" style="padding-bottom:10px; font-size: 18px;">{{ nav.communities[k].community_profiles[nav.location.key].name }}
                         <button ng-click="nav.communitySettings(nav.communities[k], true);" class="btn btn-xs pull-right">Embed</button>
                         <button ng-click="nav.editCommunity(nav.communities[k]);" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
                     </div>
