--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -133,11 +133,11 @@
                             </span>
                         </a>
                         <a ui-sref="{{'community.dashboard' + nav.nav_url}}" ng-class="{active: nav.path.includes('/' + nav.community.key)}" style="padding-left: 15px; font-size: 16px; font-weight: bold;">
-                            <span ng-if="nav.community.community_profiles[nav.location_path]" ng-click="c_working = true">
-                                {{nav.community.community_profiles[nav.location_path].name}}
+                            <span ng-if="nav.community.community_profiles[nav.location.key]" ng-click="c_working = true">
+                                {{nav.community.community_profiles[nav.location.key].name}}
                                 <span loading-bars ng-show="c_working"></span>
                             </span>
-                            <span ng-if="!nav.community.community_profiles[nav.location_path]">
+                            <span ng-if="!nav.community.community_profiles[nav.location.key]">
                                 {{nav.community.profile.name}}
                                 <span loading-bars ng-show="c_working"></span>
                             </span>
@@ -146,14 +146,14 @@
                             <li ui-sref="{{'user.list' + nav.nav_url}}" ng-class="{ 'active' : nav.path.endsWith(nav.community.key + '/people') }" style="padding-top: 10px;">
                                 <a><i class="fa fa-caret-right"></i>People
                                 </a>
-                                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location_path) > -1))" class="nav-third-level" ng-click="nav.invitePeople();">
+                                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" class="nav-third-level" ng-click="nav.invitePeople();">
                                     <a style="color: #aaa;">+&nbsp;&nbsp;Invite People</a>
                                 </li>
                             </li>
                             <li ui-sref="{{'company.list' + nav.nav_url}}" ng-class="{ 'active' : nav.path.endsWith(nav.community.key + '/companies') }">
                                 <a><i class="fa fa-caret-right"></i>Companies
                                 </a>
-                                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location_path) > -1))" class="nav-third-level" ng-click="nav.addCompany();">
+                                <li ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" class="nav-third-level" ng-click="nav.addCompany();">
                                     <a style="color: #aaa;">+&nbsp;&nbsp;Add Company</a>
                                 </li>
                             </li>
@@ -222,15 +222,10 @@
                     </li>
                     <li ng-repeat="item in nav.clusters">
                         <a ui-sref="{{'community.dashboard' + nav.nav_jump}}" ng-class="{active: nav.path.includes('/' + item.key)}" ng-click="cl_working = true">
-                            <span ng-if="item.community_profiles[nav.location_path]">
-                                <i ng-class="'fa ' + item.community_profiles[nav.location_path].icon"></i> {{item.community_profiles[nav.location_path].name}}
+                            <span ng-if="item.community_profiles[nav.location.key]">
+                                <i ng-class="'fa ' + item.community_profiles[nav.location.key].icon"></i> {{item.community_profiles[nav.location.key].name}}
                                 <span loading-bars ng-show="cl_working"></span>
                             </span>
-                            <span ng-if="!item.community_profiles[nav.location_path]">
-                                <i ng-class="'fa ' + item.profile.icon"></i> {{item.profile.name}}
-                                <span loading-bars ng-show="cl_working"></span>
-                            </span>
-
                         </a>
                     </li>
                     <li ng-if="nav.user.communities.indexOf(nav.location.key) > -1">
@@ -253,11 +248,7 @@
                     </li>
                     <li ng-repeat="item in nav.parents | toArray | orderBy: 'key'">
                         <a ui-sref="{{'community.dashboard' + nav.nav_jump}}" ng-class="{active: nav.path.includes('/' + item.key)}" ng-click="cl_working = true">
-                            <span ng-if="item.community_profiles[nav.location_path]">
-                                <i ng-class="'fa ' + item.community_profiles[nav.location_path].icon"></i> {{item.community_profiles[nav.location_path].name}}
-                                <span loading-bars ng-show="cl_working"></span>
-                            </span>
-                            <span ng-if="!item.community_profiles[nav.location_path]">
+                            <span>
                                 <i ng-class="'fa ' + item.profile.icon"></i> {{item.profile.name}}
                                 <span loading-bars ng-show="cl_working"></span>
                             </span>
