cluster rename working

--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -47,7 +47,7 @@
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
                     <li ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1">
-                        <a ng-click="nav.editCommunity({'type':'cluster'});" style="color: #aaa;">+&nbsp;&nbsp;Add Cluster</a>
+                        <a ng-click="nav.editCommunity({type:'cluster'});" style="color: #aaa;">+&nbsp;&nbsp;Add Cluster</a>
                     </li>
                 </ul>
             </div>
