--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -46,7 +46,7 @@
                             <a>Alerts</a>
                         </li>
                         <li ng-if="nav.user">
-                            <a ui-sref="settings({location_path: nav.user.profile.home})">Settings</a>
+                            <a ui-sref="settings({location_path: nav.user.key, location: nav.communities[nav.user.profile.home], community: nav.communities[nav.user.profile.home]})">Settings</a>
                         </li>
                         <li ng-if="nav.user">
                             <a ng-click="nav.openChat()">Help</a>
@@ -90,7 +90,7 @@
                         </a>
                     </li>
                     <li ng-if="nav.user" class="dropdown">
-                        <a href="{{ nav.user.key }}/settings" tooltip-placement="bottom" tooltip="Settings">
+                        <a ui-sref="settings({location_path: nav.user.key, location: nav.communities[nav.user.profile.home], community: nav.communities[nav.user.profile.home]})" tooltip-placement="bottom" tooltip="Settings">
                             <i class="pe-7s-config"></i>
                         </a>
                     </li>
