--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -7,9 +7,9 @@
                         <h2 class="font-light m-b-xs">Industries</h2>
                     </div>
                     <div class="pull-right col-sm-8" style="padding-right:0;">
-                        <div ng-repeat="p in dashboard.top.parents" style="padding-left: 0; padding-right: 0; ">
+                        <div ng-repeat="p in nav.top.parents | limitTo: 3" style="padding-left: 0; padding-right: 0; ">
                             <div class="col-sm-6" style="margin-top:-3px; padding-left: 0; padding-right: 0; text-align: right;"><a ui-sref="community.dashboard({community_path: p.label, community: nav.communities[p.label], query: '*', location_path: nav.location.key})">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></div>
-                            <div class="col-sm-6 hidden-xs" style="padding-left: 10px; padding-right: 0;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></div>
+                            <div class="col-sm-6 hidden-xs" style="padding-left: 10px; padding-right: 0;"><progressbar value="p.value" max="nav.max" type="success" class="progress-small full"></progressbar></div>
                         </div>
                     </div>
 
@@ -22,8 +22,8 @@
                     <div class="col-xs-8">
                         <div class="pull-left">
                             <h2 class="font-light m-b-xs">Leaders</h2>
-                            <div ng-repeat="lead in dashboard.top.leaders | limitTo: 5" style="float:left;">
-                                <a class="text-info" ui-sref="user.dashboard({profile: lead.value, location_path: lead.path.key, community: {}})"><small><span ng-if="$last && $index !== 0">&nbsp;and</span>&nbsp;{{lead.value.profile.name}}<span ng-if="!$last && dashboard.top.leaders.length > 2">,</span></small></a>
+                            <div ng-repeat="lead in nav.top.leaders | limitTo: 5" style="float:left;">
+                                <a class="text-info" ui-sref="user.dashboard({profile: lead.value, location_path: lead.path.key, community: {}})"><small><span ng-if="$last && $index !== 0">&nbsp;and</span>&nbsp;{{lead.value.profile.name}}<span ng-if="!$last && nav.top.leaders.length > 2">,</span></small></a>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             <div class="stats-title">
                                 <a ui-sref="{{'company.list' + nav.nav_url}}">
                                     <h3>Companies</h3>
-                                    <h1 style="color:#34495E;">{{dashboard.top.companies.count}}</h1>
+                                    <h1 style="color:#34495E;">{{nav.top.companies.count}}</h1>
                                 </a>
                             </div>
                         </div>
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="panel-footer" style="background: #fff;">
-                        <div ng-repeat="item in dashboard.top.companies.entries | limitTo: 3">
+                        <div ng-repeat="item in nav.top.companies.entries | limitTo: 3">
                             <div style="margin-right: -2px; margin-bottom:-5px;">
                                 <div ng-if="$first" style="padding-top:5px;"></div>
                                 <div class="row" ng-include="'components/companies/company.list.item.html'"></div>
@@ -76,7 +76,7 @@
                             <div class="stats-title pull-left">
                                 <a ui-sref="{{'user.list' + nav.nav_url}}">
                                     <h3>People</h3>
-                                    <h1 class="text-info">{{dashboard.top.people.count}}</h1>
+                                    <h1 class="text-info">{{nav.top.people.count}}</h1>
                                 </a>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="panel-footer" style="background: #fff;">
-                        <div ng-repeat="item in dashboard.top.people.entries | limitTo: 3">
+                        <div ng-repeat="item in nav.top.people.entries | limitTo: 3">
                             <div style="margin-right: -2px; margin-bottom:-5px;">
                                 <div ng-if="$first" style="padding-top:5px;"></div>
                                 <div class="row" ng-include="'components/users/user.list.item.html'"></div>
@@ -106,11 +106,11 @@
                         <h3>Top Industries</h3>
                     </div>
 
-                    <div class="panel-body" ng-repeat="item in dashboard.top.industries.entries | limitTo: 5">
+                    <div class="panel-body" ng-repeat="item in nav.top.industries.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="(item.count/dashboard.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <progressbar ng-attr-value="(item.count/nav.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number">{{item.count}}</span>
@@ -128,11 +128,11 @@
                         <h3>Top Skills</h3>
                     </div>
 
-                    <div class="panel-body" ng-repeat="item in dashboard.top.skills.entries | limitTo: 5">
+                    <div class="panel-body" ng-repeat="item in nav.top.skills.entries | limitTo: 5">
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <progressbar ng-attr-value="(item.count/nav.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number">{{item.count}}</span>
