--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -243,13 +243,13 @@
                 </span>
                 </a>
                 <ul class="nav nav-second-level">
-                    <li ng-if="!nav.parents || nav.parents === []">
+                    <li ng-if="!nav.top.parents || nav.top.parents === []">
                         <a title="Edit your user profile to associate yourself with an industry" class="nav-nohover">No industries yet</a>
                     </li>
-                    <li ng-repeat="item in nav.parents | toArray | orderBy: 'key'">
-                        <a ui-sref="{{'community.dashboard' + nav.nav_jump}}" ng-class="{active: nav.path.includes('/' + item.key)}" ng-click="cl_working = true">
+                    <li ng-repeat="item in nav.top.parents | orderBy: 'item.value' : reverse">
+                        <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.user.profile.home})" ng-class="{active: nav.path.includes('/' + item.label)}" ng-click="cl_working = true">
                             <span>
-                                <i ng-class="'fa ' + item.profile.icon"></i> {{item.profile.name}}
+                                <i ng-class="'fa ' + nav.communities[item.label].profile.icon"></i> {{item.label[0].toUpperCase() + item.label.slice(1);}}
                                 <span loading-bars ng-show="cl_working"></span>
                             </span>
 
