--- a/app/less/forum.less
+++ b/app/less/forum.less
@@ -54,6 +54,12 @@
     }
   }
 
+  .number-column {
+    float:right;
+    margin-right:5px;
+    margin-top:10px;
+  }
+
   .panel-body .media-image {
     text-align: center;
     margin-right: 10px;
