--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,12 @@
 /* Custom */
 
+.small-column-title {
+  float:right;
+  white-space:nowrap;
+  margin-top:-5px;
+  margin-right:-10px;
+}
+
 .nav-nohover:hover {
   background-color: #fff !important;
   cursor: default !important;
