--- a/app/components/companies/company.dashboard.profile.html
+++ b/app/components/companies/company.dashboard.profile.html
@@ -73,6 +73,6 @@
     <h3>Summary</h3>
     <p style="white-space:pre-wrap;" ng-bind-html="::profile.company.profile.summary | linky:'_blank'"></p>
     <hr>
-    <h3 ng-show="profile.company.profile.industries">Industries</h3>
+    <h3 ng-show="profile.company.profile.industries">Markets</h3>
     <li ng-repeat="industry in profile.company.profile.industries" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: industry})">{{::industry}}</a></li>
 </div>
