--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -60,7 +60,7 @@
                         <br>
                         Add up to six specific markets <a href="{{welcome.selectedCompany.angellist_url}}" target="_blank" title="{{welcome.selectedCompany.name}}'s AngelList Profile">{{welcome.selectedCompany.name}}</a> is a part of:
                         <div class="panel-body industry_select" style="padding:1px; margin-top: 6px; margin-bottom: 6px;">
-                            <ui-select multiple ng-model="welcome.selectedCompany.industries" tagging="true" tagging-label="(new)" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on industries with a network in your community." alert_type="warning" style="border:none;">
+                            <ui-select multiple ng-model="welcome.selectedCompany.industries" tagging="true" tagging-label="(new)" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on markets that this company has leadership in." alert_type="warning" style="border:none;">
                                 <ui-select-match placeholder="Search for markets..">{{$item}}</ui-select-match>
                                 <ui-select-choices repeat="industry in welcome.industries | filter:$select.search | limitTo: 25">
                                     {{industry}}
